@@ -1,7 +1,7 @@
 dnl abook configure.in
 
 AC_INIT(abook.c)
-AM_INIT_AUTOMAKE(abook, 0.4.15pre1)
+AM_INIT_AUTOMAKE(abook, 0.4.15pre2)
 AM_CONFIG_HEADER(config.h)
 
 AC_CANONICAL_HOST
